# RHPS_Casting

./: .gitignore  Makefile  Pipfile  README.md  README.txt  main.py  pyproject.toml
src/classes/: cast.py  cast_generator.py  google_connector.py
tests/: test_cast_generator.py  test_classes.py
tests/fixtures/: preferences.csv  roles.csv
