[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry]
name = "RHPS Casting"
version = "0.2.0"
description = "A Casting Application for Rocky Horror Casts, Developed for Double Feature Productions in NYC"
license = "Apache"
authors = [
    "Griffin Barich"
]
repository = "https://github.com/GmanB3398/RHPS_Casting"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.4.4"
pytest-cov = "^5.0.0"
black = ">=22.3.0"
mypy = "^1.13"
jupyter = "*"
ipykernel = "*"
tqdm = "*"
pandas-stubs = "^2.2.0"